--- a/style.css
+++ b/style.css
@@ -1,111 +1,102 @@
 html, body {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
 }
 
 .container {
-  max-width: 940px;
-  margin: 0 auto;
-  padding: 0 10px;
+	margin: 0 auto;
+	max-width: 940px; 
+	padding: 0 10px; 
 }
 
-.jumbotron {
+
+/* Header */
+.header {
   height: 800px;
+  text-align: center; 
 }
 
-.nav {
-  margin: 0;
-  padding: 20px 0;
+.header .container {
+	position: relative;
+	top: 200px;
 }
 
-.nav li {
-  color: #fff;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  font-size: 12px;
+.header h1 {
+	font-size: 80px;
+	line-height: 100px; 
+	margin-top: 0;
+	margin-bottom: 80px;
 }
 
-.main {
-  position: relative;
-  top: 180px;
-  text-align: center;
+@media (min-width:850px) {
+	.header h1 {
+		font-size: 120px;
+	}
 }
 
-.main h1 {
-  color: #333;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  font-size: 70px;
-  margin-top: 0;
-  margin-bottom: 80px;
-  text-transform: uppercase;
+.header p {
+	font-weight: 500;
+	letter-spacing: 8px;
+	margin-bottom: 40px;
+	margin-top: 0;
 }
 
-.btn-main {
-  background-color: #333;
-  color: #fff;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  letter-spacing: 1.3px;
-  padding: 16px 40px;
-  text-decoration: none;
-  text-transform: uppercase;
+.btn:hover {
+	background: #117bff;
+	cursor: pointer; 
+	transition: background .5s;  
 }
 
-.supporting {
-  padding-top: 80px;
-  padding-bottom: 100px;
+
+/* Nav */
+.nav ul {
+	list-style: none;
+	margin: 0 auto; 
+	padding: 30px 0;
+	text-align: center; 
 }
 
-.supporting .col {
-  float: left;
-  width: 33%;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
+
+/* Main */
+.main .container {
+	margin: 80px auto;
 }
 
-.supporting img {
-  height: 32px;
+
+/* Jumbotron */
+.jumbotron {
+	height: 600px; 
+	text-align: right;
 }
 
-.supporting h2 {
-  font-weight: 600;
-  font-size: 23px;
-  text-transform: uppercase;
+.jumbotron .container {
+	position: relative;
+	top: 220px;
 }
 
-.supporting p {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  padding: 0 50px;
-  margin-bottom: 40px;
+
+/* Footer */
+.footer { 
+	font-size: 14px;
 }
 
-.clearfix {
-  clear: both;
-}
-
-.footer {
-  background-color: #333;
-  color: #fff;
-  padding: 30px 0;
-}
-
-.footer p {
-  font-family: 'Raleway', sans-serif;
-  text-transform: uppercase;
-  font-size: 11px;
-}
-
+/* Media Queries */
 @media (max-width: 500px) {
-  .main h1 {
+  .header h1 {
     font-size: 50px;
-    padding: 0 40px;
+    line-height: 64px;
   }
 
-  .supporting .col {
+  .main, .jumbotron {
+    padding: 0 30px;
+  }
+
+  .main img {
     width: 100%;
   }
 }
